--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
 
                   <div class="badge">-15%</div>
 
-                  <button class="btn food-menu-btn">Order Now</button>
+                  <button class="btn food-menu-btn">Commandez Maintenant</button>
                 </div>
 
                 <div class="wrapper">
@@ -485,7 +485,7 @@
 
                   <div class="badge">-10%</div>
 
-                  <button class="btn food-menu-btn">Order Now</button>
+                  <button class="btn food-menu-btn">Commandez Maintenant</button>
                 </div>
 
                 <div class="wrapper">
@@ -524,7 +524,7 @@
 
                   <div class="badge">-25%</div>
 
-                  <button class="btn food-menu-btn">Order Now</button>
+                  <button class="btn food-menu-btn">Commandez Maintenant</button>
                 </div>
 
                 <div class="wrapper">
@@ -563,7 +563,7 @@
 
                   <div class="badge">-20%</div>
 
-                  <button class="btn food-menu-btn">Order Now</button>
+                  <button class="btn food-menu-btn">Commandez Maintenant</button>
                 </div>
 
                 <div class="wrapper">
@@ -602,7 +602,7 @@
 
                   <div class="badge">-5%</div>
 
-                  <button class="btn food-menu-btn">Order Now</button>
+                  <button class="btn food-menu-btn">Commandez Maintenant</button>
                 </div>
 
                 <div class="wrapper">
@@ -641,7 +641,7 @@
 
                   <div class="badge">-15%</div>
 
-                  <button class="btn food-menu-btn">Order Now</button>
+                  <button class="btn food-menu-btn">Commandez Maintenant</button>
                 </div>
 
                 <div class="wrapper">
@@ -701,7 +701,7 @@
               invasion of the 1120s, while it is also known that many restaurants were run by families.
             </p>
 
-            <button class="btn btn-hover">Order Now</button>
+            <button class="btn btn-hover">Commandez Maintenant</button>
           </div>
 
           <figure class="cta-banner">
@@ -738,7 +738,7 @@
               invasion of the 1120s, while it is also known that many restaurants were run by families.
             </p>
 
-            <button class="btn btn-hover">Order Now</button>
+            <button class="btn btn-hover">Commandez Maintenant</button>
           </div>
 
           <figure class="delivery-banner">
@@ -907,7 +907,7 @@
 
                   <p class="banner-text">Sale off 50% only this week</p>
 
-                  <button class="btn">Order Now</button>
+                  <button class="btn">Commandez Maintenant</button>
                 </div>
 
               </div>
@@ -924,7 +924,7 @@
 
                   <p class="banner-text">50% off Now</p>
 
-                  <button class="btn">Order Now</button>
+                  <button class="btn">Commandez Maintenant</button>
                 </div>
 
               </div>
@@ -941,7 +941,7 @@
 
                   <p class="banner-text">50% off Now</p>
 
-                  <button class="btn">Order Now</button>
+                  <button class="btn">Commandez Maintenant</button>
                 </div>
 
               </div>
@@ -958,7 +958,7 @@
 
                   <p class="banner-text">Sale off 50% only this week</p>
 
-                  <button class="btn">Order Now</button>
+                  <button class="btn">Commandez Maintenant</button>
                 </div>
 
               </div>
